--- a/Makefile.am
+++ b/Makefile.am
@@ -204,6 +204,9 @@ debug:
 coverage:
 	$(MAKE) all CFLAGS="" AM_CPPFLAGS="-fprofile-arcs -ftest-coverage -DDEBUG" LDFLAGS="-lgcov"
 
+sonar_sonar:
+    sonar-scanner -X
+
 .c.h:
 	@srcdir@/scripts/MakeHeader.py $<
 
