check sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
- sonar.projectkey=htop-project
+ sonar.projectKey=htop-project
  sonar.projectName= my project
  sonar.projectVersion=1.0
  sonar.sources=.
