check sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,10 @@
  sonar.projectName= my project
  sonar.projectVersion=1.0
  sonar.sources=.
+ sonar.language=c
+
+ # The build-wrapper output dir
+ sonar.cfamily.build-wrapper-output=bw-outputs
 
  sonar.host.url=http://sonar:9000
  sonar.sourceEncoding=UTF-8
